--- a/test.html
+++ b/test.html
@@ -5,56 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .box{
-            background: blue;
-            height: 334px;
-            width: 150px;
-            position: absolute;
-            top: 50px;
-        }
-        .img{
-            width: 150px;
-            height: 100px;
-            background: red;
-        }
-    </style>
 </head>
+<style>
+</style>
 <body>
-    <div>
-    <div class="box">
-        <div class="img"></div>
-    </div>
-    </div>
+    
 </body>
 <script>
-
-    // console.log(this.sayHi);
-    // sayHi()
-    // var person = {
-    //     name:'zs',
-    //     age:'11',
-    //     sayHi:function(){
-    //         console.log('hi');
-    //         console.log(this.name);
-    //     }
-    // }
-    // console.log(this.person);
-    // person.sayHi()
-    var a = {
-        name:'11',
-        o:()=>{
-            console.log(this.name);
-        }
-    }
-    var b = {
+    var list = [{
+        name:'zs',
+        age:11,
+    },
+    {
         name:'ls',
-        o:function(){
-            console.log(this.name);
-        }
-    }
-    a.o()
-    b.o()
-
+        age:22
+    },{
+        name:'zs',
+        age:'11'
+    }]
+   var newList = {}
+    newList = list.map(item=>item)
+    console.log(newList);
 </script>
 </html>
